--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@ img { display: block; }
 }">
 
 <head>
-    <script charset="UTF-8" type="text/javascript" src="./one.js"></script>
-    <script type="module" src="endless.js" defer></script>
+    <script type="module" src="candy.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preload" href="286c0c7c193bbacc-s.p.woff2" as="font" type="font/woff2">
   <link rel="preload" href="3818f1bd4832a6dd-s.p.woff2" as="font" type="font/woff2">
